refactor: ScoreDirector is no longer public (#2129)